Add experimental PercentalDifferentialMovement